Fix bug when clicking on an already visible card

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,21 +4,23 @@
     height: 100%;
     text-align: center;
     perspective: 1000px;
+    cursor: pointer;
 
     &__inner {
         position: relative;
         width: 100%;
         height: 100%;
         text-align: center;
-        transition: transform 0.5s;
+        transition: transform 0.3s;
         transform-style: preserve-3d;
 
         &.visible {
             transform: rotateY(180deg);
+            pointer-events: none;
         }
 
         &.hidden {
-            transition-delay: 2s;
+            //transition-delay: 0.3s;
         }
 
         // &:hover {
